# GoGame

./: .gitignore  CMakeLists.txt  GoGame.sln  GoGame.vcxproj  GoGame.vcxproj.filters  README.md  buildGame.bat
assets/: gopgn.txt
include/: AboutMenu.hpp  Board.hpp  BoardTimer.hpp  GameLogic.hpp  GameUI.hpp  Helper.hpp  KataGo.hpp  MediaPlayer.hpp  Menu.hpp  MoveController.hpp  OptionMenu.hpp  Popup.hpp  Render.hpp  RulesMenu.hpp  Texture.hpp
src/: AboutMenu.cpp  Board.cpp  BoardTimer.cpp  GameLogic.cpp  GameUI.cpp  Helper.cpp  KataGo.cpp  MediaPlayer.cpp  Menu.cpp  MoveController.cpp  OptionMenu.cpp  Popup.cpp  Render.cpp  RulesMenu.cpp  Texture.cpp  main.cpp
